--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -17,7 +17,7 @@ services:
       - "KAFKA-CONFIG_TOPIC-NAME=twitter-topic"
       - "KAFKA-CONFIG_BOOTSTRAP-SERVERS=kafka-broker-1:9092, kafka-broker-2:9092, kafka-broker-3:9092"
       - "KAFKA-CONFIG_SCHEMA-REGISTRY-URL=http://schema-registry:8081"
-      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-MOCK-TWEETS=false"
-      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-V2-TWEETS=true"
+#      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-MOCK-TWEETS=false"
+#      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-V2-TWEETS=true"
     networks:
       - ${GLOBAL_NETWORK:-services}
