configs to add config-server as a Docker Container II

--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -6,12 +6,15 @@ services:
       - "5005:5005"
     volumes:
       - "./docker-logs:/workspace/twitter-to-kafka-service/logs"
-    #   Here we see that we can simply override any configuration variable, for example, for the bootstrap server
-    #   We use the Kafka-broker-1 from Kafka cluster yml file instead of localhost because we will run *everything inside docker*
-    #   And to be able to reach to Kafka from our service, we should use hostname.
-    #  Because inside docker, all these containers will act as different hosts.
+      - "./check-config-server-started.sh:/usr/local/bin/check-config-server-started.sh"
+      #   Here we see that we can simply override any configuration variable, for example, for the bootstrap server
+      #   We use the Kafka-broker-1 from Kafka cluster yml file instead of localhost because we will run *everything inside docker*
+      #   And to be able to reach to Kafka from our service, we should use hostname.
+      #  Because inside docker, all these containers will act as different hosts.
     user: root
-    entrypoint: [ "check-config-server-started.sh" ]
+    entrypoint: ["check-config-server-started.sh"]
+    depends_on:
+      - config-server
     environment:
       - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Xms128m -Xmx256m"
       - "LOGGING_LEVEL_COM_MICROSERVICES_DEMO=info"
@@ -19,8 +22,7 @@ services:
       - "KAFKA-CONFIG_TOPIC-NAME=twitter-topic"
       - "KAFKA-CONFIG_BOOTSTRAP-SERVERS=kafka-broker-1:9092, kafka-broker-2:9092, kafka-broker-3:9092"
       - "KAFKA-CONFIG_SCHEMA-REGISTRY-URL=http://schema-registry:8081"
-      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-MOCK-TWEETS=false"
-      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-V2-TWEETS=true"
+      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-MOCK-TWEETS=true"
       #      To be able to reach to Config server, Twitter to Kafka service cannot use localhost anymore.
       #It should use the host name of the config server container.
       - "SPRING_CLOUD_CONFIG_URI=http://config-server:8888"
@@ -44,4 +46,3 @@ services:
       #passed encrypt_key environment variable in the environment section because it is required to decrypt the secrets at runtime.
     networks:
       - ${GLOBAL_NETWORK:-services}
-      #here I have the network definition, which uses global network from the environment
