--- a/twitter-to-kafka-service/src/main/resources/application.yml
+++ b/twitter-to-kafka-service/src/main/resources/application.yml
@@ -1,3 +1,16 @@
 #the application.yaml file in the Twitter to Kafka service emptied, otherwise it will overwrite
 #the configuration that you defined in the config server repository because I configured overriding
 #properties in the config-client.yml file.
+
+twitter-to-kafka-service:
+  twitter-keywords:
+    - Java
+    - Microservices
+    - Kafka
+    - Elasticsearch
+  welcome-message: Hello microservices!
+  enable-mock-tweets: true
+  enable-v2-tweets: false
+  mock-min-tweet-length: 5
+  mock-max-tweet-length: 15
+  mock-sleep-ms: 10000
