--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -7,15 +7,15 @@ services:
     volumes:
       - "./docker-logs:/workspace/twitter-to-kafka-service/logs"
 #      - "./check-config-server-started.sh://wsl.localhost/docker-desktop/usr/local/bin/check-config-server-started.sh"
-#      - "./check-config-server-started.sh:/workspace/twitter-to-kafka-service"
+      - "./check-config-server-started.sh:/usr/local/bin/check-config-server-started.sh"
 #      #   Here we see that we can simply override any configuration variable, for example, for the bootstrap server
 #      #   We use the Kafka-broker-1 from Kafka cluster yml file instead of localhost because we will run *everything inside docker*
 #      #   And to be able to reach to Kafka from our service, we should use hostname.
 #      #  Because inside docker, all these containers will act as different hosts.
-#    user: root
-#    entrypoint: ["check-config-server-started.sh"]
-#    depends_on:
-#      - config-server
+    user: root
+    entrypoint: ["check-config-server-started.sh"]
+    depends_on:
+      - config-server
     environment:
       - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Xms128m -Xmx256m"
       - "LOGGING_LEVEL_COM_MICROSERVICES_DEMO=info"
@@ -23,8 +23,8 @@ services:
       - "KAFKA-CONFIG_TOPIC-NAME=twitter-topic"
       - "KAFKA-CONFIG_BOOTSTRAP-SERVERS=kafka-broker-1:9092, kafka-broker-2:9092, kafka-broker-3:9092"
       - "KAFKA-CONFIG_SCHEMA-REGISTRY-URL=http://schema-registry:8081"
-      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-MOCK-TWEETS=false"
-      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-V2-TWEETS=true"
+      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-MOCK-TWEETS=true"
+      - "TWITTER-TO-KAFKA-SERVICE_ENABLE-V2-TWEETS=false"
       #      To be able to reach to Config server, Twitter to Kafka service cannot use localhost anymore.
       #It should use the host name of the config server container.
       - "SPRING_CLOUD_CONFIG_URI=http://config-server:8888"
@@ -34,6 +34,7 @@ services:
   config-server:
     image: ${GROUP_ID}/config.server:${SERVICE_VERSION:-latest}
     ports:
+      - "8888:8888"
       - "5006:5006"
     volumes:
       #In order to not lose the LOG data, preserving its old states after restarting the Container, we use VOLUMES
@@ -45,6 +46,7 @@ services:
       #      in the Java Opts environment variable, set the 5006 port to open a port for remote debugging for this service
       - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006 -Xms128m -Xmx256m"
       - "ENCRYPT_KEY=${ENCRYPT_KEY}"
+      - "SERVER_PORT=8888"
       #passed encrypt_key environment variable in the environment section because it is required to decrypt the secrets at runtime.
     networks:
       - ${GLOBAL_NETWORK:-services}
