--- a/twitter-to-kafka-service/src/main/resources/application.yml
+++ b/twitter-to-kafka-service/src/main/resources/application.yml
@@ -2,15 +2,15 @@
 #the configuration that you defined in the config server repository because I configured overriding
 #properties in the config-client.yml file.
 
-twitter-to-kafka-service:
-  twitter-keywords:
-    - Java
-    - Microservices
-    - Kafka
-    - Elasticsearch
-  welcome-message: Hello microservices!
-  enable-mock-tweets: true
-  enable-v2-tweets: false
-  mock-min-tweet-length: 5
-  mock-max-tweet-length: 15
-  mock-sleep-ms: 10000
+#twitter-to-kafka-service:
+#  twitter-keywords:
+#    - Java
+#    - Microservices
+#    - Kafka
+#    - Elasticsearch
+#  welcome-message: Hello microservices!
+#  enable-mock-tweets: false
+#  enable-v2-tweets: true
+#  mock-min-tweet-length: 5
+#  mock-max-tweet-length: 15
+#  mock-sleep-ms: 10000
