--- a/kafka-to-elastic-service/pom.xml
+++ b/kafka-to-elastic-service/pom.xml
@@ -36,8 +36,21 @@
       <groupId>io.confluent</groupId>
       <artifactId>kafka-avro-serializer</artifactId>
     </dependency>
+    <!--    Integration of the 3 Elastic Modules in the Service-->
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.microservices.demo</groupId>
+      <artifactId>elastic-index-client</artifactId>
+    </dependency>
 
-<!--    We need to add cloud starter config and starter security dependencies to able to use config server-->
+    <!--    We need to add cloud starter config and starter security dependencies to able to use config server-->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-config</artifactId>
@@ -48,15 +61,40 @@
     </dependency>
   </dependencies>
 
-<!--  maven plug in without build image goal (as it is in the twitter-to-kafka-service), to be able to create a runnable Jar file.-->
+  <!--  maven plug in without build image goal (as it is in the twitter-to-kafka-service), to be able to create a runnable Jar file.-->
+  <!--  <build>-->
+  <!--    <plugins>-->
+  <!--      <plugin>-->
+  <!--        <groupId>org.springframework.boot</groupId>-->
+  <!--        <artifactId>spring-boot-maven-plugin</artifactId>-->
+  <!--      </plugin>-->
+  <!--    </plugins>-->
+  <!--  </build>-->
+
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <!--          we will give a name to our docker image.-->
+          <image>
+            <name>${project.groupId}/kafka.to.elastic.service:${project.version}</name>
+          </image>
+        </configuration>
+        <executions>
+          <execution>
+            <!--            Then in the execution section we will give the phase as installed because we want to create the docker-->
+            <phase>install</phase>
+            <goals>
+              <!--              maven install command and as a goal we will set build-image which will actually create the docker image-->
+              <goal>build-image</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
-
 
 </project>
