--- a/kafka-to-elastic-service/src/main/resources/bootstrap.yml
+++ b/kafka-to-elastic-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: kafka-to-elastic-service
   profiles:
-    active: kafka-to-elastic
+    active: kafka_to_elastic
   cloud:
     config:
       name: kafka-to-elastic-service,config-client
